--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS</title>
     <script src="rps.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Press Ctrl+Shift+J to play the game in the console!</h1>
