Added some ui and bg-img

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS</title>
-    <script src="rps.js"></script>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&family=Rock+Salt&family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap');
+    </style>
+    <script src="rps.js" defer></script>
 </head>
 <body>
-    <h1>Press Ctrl+Shift+J to play the game in the console!</h1>
+    <div class="header"></div>
+    <div class="main">
+        <h1 id="welcome">Welcome to the Wild West challenger...</h1>
+        <button id="start">Start</button>
+    </div>
+    <div class="footer"></div>
 </body>
 </html>
